--- a/src/App.less
+++ b/src/App.less
@@ -52,9 +52,9 @@ li {
 }
 
 .my_footer {
+  line-height: 50px;
   background: #eeeeee;
   text-align: center;
-  
 }
 
 @media screen and (min-width: 576px) {
